syntax = "proto3";

option java_multiple_files = true;
option java_package = "sk.bsmk.clp.grpc";
option objc_class_prefix = "Grpc";

package clp;

service ClpService {
    rpc Register (ClpRegistrationRequest) returns (ClpCustomerGrpcDetail) {}
}

message ClpRegistrationRequest {
    string customerName = 1;
}

message ClpCustomerGrpcDetail {
    string id = 1;
    string name = 2;
    string tier = 3;
    int32 points = 4;
}
